--- a/ch7/index.html
+++ b/ch7/index.html
@@ -29,7 +29,7 @@
   </head>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">2018 GOTY
+        <a class="navbar-brand" href="index.html">2018 GOTY
           <img src="img/icon.png" alt="" width="30" height="24">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
               <a class="nav-link active" aria-current="page" href="#">GOTY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">이전수상작</a>
+              <a class="nav-link" href="content2.html">이전수상작</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -76,7 +76,7 @@
         <div class="carousel-item active">
           <img src="img/spider.jpg" class="d-block w-100" alt="..."  height="600">
           <div class="carousel-caption d-none d-md-block">
-            <h5><a class="deco1" href="#">스파이더맨</a></h5>
+            <h5><a class="deco1" href="content01.html">스파이더맨</a></h5>
             <p>2018년 9월 7일</p>
         </div>
         </div>
