--- a/departments/sample1.html
+++ b/departments/sample1.html
@@ -260,9 +260,9 @@
         <span class="visually-hidden">Next</span>
       </button>
       <div class="rp">
-        <img src="./img/cat-sm01.jpg" alt="" width="300" float:top;>
-        <img src="./img/cat-sm02.jpg" alt="" width="300" float:top;>
-        <img src="./img/cat-sm03.jpg" alt="" width="300" float:top;>
+        <img src="./img/cat-sm01.jpg" alt="" width="300" >
+        <img src="./img/cat-sm02.jpg" alt="" width="300" >
+        <img src="./img/cat-sm03.jpg" alt="" width="300" >
         <p></p>
       </div>
     </div>
